test/conformance/chainsaw/openreports/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: add-labels
  namespace: test
  labels:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  admission: true
  background: true
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            foo: bar
    name: add-labels
