test/conformance/chainsaw/openreports/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
spec:
  hostNetwork: false
  containers:
  - name: nginx1
    image: public.ecr.aws/docker/library/nginx
    args:
    - sleep
    - 1d
