test/conformance/chainsaw/openreports/chainsaw-step-02-assert-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: test
  labels:
    foo: bar
