test/conformance/chainsaw/openreports/chainsaw-step-03-assert-1-1.yaml
apiVersion: openreports.io/v1alpha1
kind: Report
metadata:
  namespace: test
  labels:
    app.kubernetes.io/managed-by: kyverno
results:
- message: mutated Pod/good-pod in namespace test
  policy: test/add-labels
  properties:
    process: background scan
  result: pass
  rule: add-labels
  scored: true
  source: kyverno
scope:
  apiVersion: v1
  kind: Pod
  name: good-pod
  namespace: test
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
